objects/LLC_BI__Spread_Statement_Record_Value__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Formula__c</fullName>
        <description>This field is used to hold a mathematical formula that will be evaluated on blur of a record value cell.</description>
        <label>Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Linked__c</fullName>
        <description>This field is optional. It is populated automatically whenever the field &quot;LLC_BI__Is_Linked__c&quot; on its parent Spread Statement Record (chart of account) is enabled. When enabled, the spread statement record value cannot be altered manually. When disabled, a value can be manually entered.</description>
        <formula>LLC_BI__Spread_Statement_Record__r.LLC_BI__Is_Linked__c</formula>
        <label>Is Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Period__c</fullName>
        <description>This field is required. It is populated automatically whenever a value is calculated for a spread statement record (chart of account) within the spreading applicaton. This field specifies the Spread Statement Period associated with the Spread Statement record total.</description>
        <label>Spread Statement Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Spread Statement Record Values</relationshipLabel>
        <relationshipName>Spread_Statement_Record_Values</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
        <description>This field is required. It is populated automatically whenever a value is calculated for a spread statement record (chart of account) within the spreading applicaton. This field specifies the Spread Statement Record associated with the Spread Statement record total.</description>
        <label>Spread Statement Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Spread Statement Record Values</relationshipLabel>
        <relationshipName>Spread_Statement_Record_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>This value is optional. It is populated automatically. The numeric value of the spread statement record (chart of account) for the specified period.</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Statement Record Value</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Record Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Statement Record Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>